# benchmarks-ai-io

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks_common/: __init__.py  cli.py  metadata.py  outputs.py  stats.py
checkpointing_benchmarks/: README.md  requirements.txt
checkpointing_benchmarks/config/: default.yaml  nvme_stress.yaml  read_only.yaml
checkpointing_benchmarks/scripts/: run_local_small.sh  run_nvme_stress.sh
checkpointing_benchmarks/src/: __init__.py  checkpoint_runner.py  outputs.py  run.py
checkpointing_benchmarks/src/schema/: run_metadata.py
dataloader_benchmarks/: README.md  __init__.py
dataloader_benchmarks/config/: default.yaml
dataloader_benchmarks/scripts/: run_local.sh
dataloader_benchmarks/src/: __init__.py  dataset_gen.py  loader.py  run.py
listing_folder_benchmarks/: README.md  requirements.txt
listing_folder_benchmarks/config/: deep_tree.yaml  default.yaml  flat_tree.yaml
listing_folder_benchmarks/scripts/: run_local_deep.sh  run_local_flat.sh
listing_folder_benchmarks/src/: fs_lister.py  init.py  outputs.py  run.py  synthetic_tree.py
serving_benchmarks/: README.md  requirements.txt
serving_benchmarks/config/: default.yaml  infer_small.yaml  train_small.yaml
serving_benchmarks/docker/: Dockerfile
serving_benchmarks/scripts/: run_infer_local.sh  run_train_local.sh
serving_benchmarks/src/: __init__.py  data_generator.py  initialization.py  outputs.py  storage_utils.py  train.py
tests/: test_checkpointing.py  test_common.py  test_dataloader.py  test_listing.py
(+1 files in other folders)
